--- a/src/app/main/farming-method-screen/details/details.page.html
+++ b/src/app/main/farming-method-screen/details/details.page.html
@@ -29,8 +29,8 @@
           <div class="farming-method-details__heading">
             <h1 class="farming-method-details__heading--title">{{farmingMethod.name}} Farming Methods</h1>
             <div class="farming-method-details__heading--details">
-              <span class="farming-method-details__heading--details--name">By Jake Castor</span>
-
+              <span class="farming-method-details__heading--details--name">By
+                {{nameOfFarmer[farmingMethod.userId]?.firstName.charAt(0).toUpperCase()+ nameOfFarmer[farmingMethod.userId]?.firstName.slice(1) + ' ' + nameOfFarmer[farmingMethod.userId]?.lastName.charAt(0).toUpperCase() + nameOfFarmer[farmingMethod.userId]?.lastName.slice(1)}}</span>
             </div>
           </div>
         </ion-col>
