--- a/src/app/main/home-screen/home-screen.page.html
+++ b/src/app/main/home-screen/home-screen.page.html
@@ -11,7 +11,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content class="ion-padding" *ngIf="!isLoading">
   <div class="home__header">
     <div class="home__user">
       <div class="home__user--content">
@@ -63,4 +63,42 @@
       </ion-row>
     </ion-grid>
   </div>
+</ion-content>
+
+<ion-content class="ion-padding" *ngIf="isLoading">
+  <ion-thumbnail style="width: 100%; height: 18%;margin:4rem 0">
+    <ion-skeleton-text [animated]="true"></ion-skeleton-text>
+  </ion-thumbnail>
+
+  <ion-thumbnail style="width: 100%; height: 5%;margin-bottom:3rem">
+    <ion-skeleton-text [animated]="true"></ion-skeleton-text>
+  </ion-thumbnail>
+
+  <div style="width: 100%; height: 25%;display: flex;justify-content: space-between;">
+
+    <ion-thumbnail style="width: 45%; height: 100%">
+      <ion-skeleton-text [animated]="true"></ion-skeleton-text>
+    </ion-thumbnail>
+
+    <ion-thumbnail style="width: 45%; height: 100%">
+      <ion-skeleton-text [animated]="true"></ion-skeleton-text>
+    </ion-thumbnail>
+  </div>
+
+  <ion-thumbnail style="width: 100%; height: 5%;margin:3rem 0">
+    <ion-skeleton-text [animated]="true"></ion-skeleton-text>
+  </ion-thumbnail>
+
+  <div style="width: 100%; height: 25%;display: flex;justify-content: space-between;">
+
+    <ion-thumbnail style="width: 45%; height: 100%">
+      <ion-skeleton-text [animated]="true"></ion-skeleton-text>
+    </ion-thumbnail>
+
+    <ion-thumbnail style="width: 45%; height: 100%">
+      <ion-skeleton-text [animated]="true"></ion-skeleton-text>
+    </ion-thumbnail>
+  </div>
+
+
 </ion-content>
