--- a/src/app/onboarding-screen/screen4/screen4.page.html
+++ b/src/app/onboarding-screen/screen4/screen4.page.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <span class="skip-button" routerLink="/auth-page/sign-up">skip</span>
+  <span class="skip-button" routerLink='/auth-page/register'>skip</span>
   <ion-grid class="screen4__container">
     <ion-row class="ion-align-items-center ion-text-center">
       <ion-col>
