--- a/src/app/UI/button/button.component.scss
+++ b/src/app/UI/button/button.component.scss
@@ -18,6 +18,10 @@ button:hover {
   border: 1px solid #519259;
   color: #519259;
 }
+.yellow {
+  color: #fff;
+  background-color: #274046;
+}
 .danger {
   color: #fff;
   background-image: linear-gradient(to right, #f72f2f, #c23d3d);
