--- a/src/app/main/home-screen/cards/cards.component.scss
+++ b/src/app/main/home-screen/cards/cards.component.scss
@@ -7,6 +7,7 @@
   border-radius: 20px;
   width: 161.67px;
   justify-content: space-around;
+  margin-right: 1rem;
   &__img {
     width: 60%;
   }
