--- a/src/app/main/farming-method-screen/add/add.page.scss
+++ b/src/app/main/farming-method-screen/add/add.page.scss
@@ -15,6 +15,10 @@
     font-size: 4rem;
     font-weight: bold;
   }
+  &__back {
+    color: #ffffff;
+    text-align: left;
+  }
   &__hectares {
     font-size: 1.4rem;
     background: black;
