--- a/src/app/main/profile-screen/profile-screen.page.html
+++ b/src/app/main/profile-screen/profile-screen.page.html
@@ -1,6 +1,9 @@
 <ion-content>
   <div class="profile ion-padding">
     <app-page-header title="Profile"></app-page-header>
+    <div class="back-btn" routerLink="/main/tabs/profile">
+      <ion-icon class="back-btn--icon" name="arrow-back-outline"></ion-icon>
+    </div>
     <ion-grid>
       <ion-row>
         <ion-col class="profile__user" size-sm="8" offset-sm="2">
@@ -29,7 +32,7 @@
               <span class="profile__account__items__item--name">Agriculture</span>
               <ion-icon name="chevron-forward-outline"></ion-icon>
             </div>
-            <div class="profile__account__items__item">
+            <div class="profile__account__items__item" (click)="myMethods()">
               <div class="profile__account__items__item--icon-container">
                 <ion-img src="assets/icon/methods.webp" class="profile__account--icon"></ion-img>
               </div>
