--- a/src/app/profile-setup/add-image/add-image.page.html
+++ b/src/app/profile-setup/add-image/add-image.page.html
@@ -4,10 +4,12 @@
       <h1 class="add-image__title">Welcome, {{user?.firstName.charAt(0).toUpperCase() + user?.firstName.slice(1)}}</h1>
       <p class="add-image__message">Add photos so that other users can know you</p>
     </div>
-    <ion-img class="add-image__img" src="assets/img/jake.jpg"></ion-img>
+    <app-camera (imagePick)="onImagePicked($event)"></app-camera>
     <div class="add-image__buttons">
-      <app-button class="solid" name="Upload a photo"></app-button>
+      <!-- <app-button class="solid" name="Upload a photo"></app-button> -->
+      <app-button name="Done" class="solid" (click)="doneClickHandler()"></app-button>
       <app-button name="Skip for now" class="ion-margin-top" (click)="skipHandlerClick()"></app-button>
     </div>
+
   </div>
 </ion-content>
