--- a/src/app/profile-setup/add-image/add-image.page.scss
+++ b/src/app/profile-setup/add-image/add-image.page.scss
@@ -1,20 +1,17 @@
 .add-image {
-  display: grid;
   text-align: center;
-  place-items: center;
-  grid-template-rows: repeat(3, 24rem);
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 2.4rem;
   &__title {
     align-self: flex-end;
   }
   &__message {
   }
-  &__img {
-    width: 20rem;
-    border-radius: 100%;
-    overflow: hidden;
-  }
+
   &__buttons {
+    margin-top: 6.4rem;
     width: 100%;
     align-self: flex-end;
   }
