--- a/src/app/main/profile-screen/my-methods/my-methods.page.html
+++ b/src/app/main/profile-screen/my-methods/my-methods.page.html
@@ -1,7 +1,7 @@
 <ion-content class="ion-padding">
   <div class="my-methods">
     <app-page-header title="My Methods"></app-page-header>
-    <div class="back-btn" routerLink="/main/tabs/profile">
+    <div class="back-btn" (click)="backBtnHandler()">
       <ion-icon class="back-btn--icon" name="arrow-back-outline"></ion-icon>
     </div>
     <div class="my-methods__crops">
