--- a/src/app/main/home-screen/user-details/user-details.page.html
+++ b/src/app/main/home-screen/user-details/user-details.page.html
@@ -43,6 +43,28 @@
     <div class="border-line"></div>
     <div class="user-details__farming-methods">
       <h3>Posted farming methods</h3>
+      <div class="card-item" *ngFor="let farmingMethod of userFarmingMethod" (click)="onClickFarmingMethodHandler(farmingMethod.farmingMethodId
+      )">
+
+        <div class="card-item__first">
+          <img src="assets/img/jake.jpg" alt="">
+          <div class="card-item__first-name-details">
+            <h3>
+              {{user.firstName.charAt(0).toUpperCase() + user.firstName.slice(1) + ' ' + user.lastName.charAt(0).toUpperCase() + user.lastName.slice(1) }}
+            </h3>
+            <span>{{farmingMethod.date.toLocaleDateString("en-US") | date}}</span>
+          </div>
+        </div>
+        <div class="card-item__middle">
+          <p>{{farmingMethod.methods[0].title}}</p>
+        </div>
+        <div class="card-item__last">
+          <div class="card-item__last-name">{{farmingMethod.name}}
+          </div>
+          <div class="card-item__last-hectares">{{farmingMethod.hectares}} ha</div>
+        </div>
+      </div>
+
     </div>
   </div>
 
