--- a/src/app/onboarding-screen/content/content.component.scss
+++ b/src/app/onboarding-screen/content/content.component.scss
@@ -5,17 +5,17 @@
   align-items: center;
 }
 .img {
-  width: 250px;
-  height: 250px;
+  width: 225px;
+  height: 225px;
 }
 h1 {
   font-weight: bold;
-  font-size: 29px;
+  font-size: 3rem;
   color: var(--ion-color-gray);
 }
 p {
   color: var(--ion-color-gray-light);
-  font-size: 18px;
+  font-size: 1.6rem;
   margin-top: 10px;
   padding: 0 15px;
 }
@@ -26,6 +26,6 @@ p {
   margin-top: 40px;
   margin-right: 30px;
   color: var(--ion-color-gray-light);
-  font-size: 20px;
+  font-size: 1.6rem;
   font-weight: bold;
 }
